--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".views.Signup4Activity"></activity>
         <activity
             android:name=".views.MatchListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
