--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".views.DetailUserRS"></activity>
+        <activity android:name=".views.Signup5Activity" />
         <activity android:name=".views.ModifyUser" />
         <activity android:name=".views.Signup4Activity" />
         <activity
