--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,36 +13,63 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logosansfond"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".views.DetailUserRS"></activity>
-        <activity android:name=".views.Signup5Activity" />
-        <activity android:name=".views.ModifyUser" />
-        <activity android:name=".views.Signup4Activity" />
+        <activity android:name=".views.ModifyPhoto"></activity>
+        <activity
+            android:name=".views.DetailUserRS"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.Signup5Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.ModifyUser"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.Signup4Activity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".views.MatchListActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".views.MenuActivity" />
         <activity
             android:name=".views.Report"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".views.DetailUser" />
-        <activity android:name=".views.DetailEvent" />
+        <activity
+            android:name=".views.DetailUser"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.DetailEvent"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".views.EventList"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".views.Home"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".views.Signup3Activity" />
-        <activity android:name=".views.Signup2Activity" />
-        <activity android:name=".views.SignupActivity" />
-        <activity android:name=".views.LoginActivity" />
-        <activity android:name=".views.MainActivity">
+        <activity
+            android:name=".views.Signup3Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.Signup2Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.SignupActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
